@@ -9,11 +9,15 @@ import com.mythostrike.model.game.Phase;
 import com.mythostrike.model.game.activity.ActiveSkill;
 import com.mythostrike.model.game.activity.Activity;
 import com.mythostrike.model.game.activity.Card;
-import com.mythostrike.model.game.activity.cards.CardList;
+import com.mythostrike.model.game.activity.PassiveSkill;
 import com.mythostrike.model.game.activity.cards.CardPile;
 import com.mythostrike.model.game.activity.events.handle.CardDrawHandle;
 import com.mythostrike.model.game.activity.events.handle.CardMoveHandle;
-import com.mythostrike.model.game.activity.system.*;
+import com.mythostrike.model.game.activity.system.CheckDying;
+import com.mythostrike.model.game.activity.system.NextPhase;
+import com.mythostrike.model.game.activity.system.PickCardToPLay;
+import com.mythostrike.model.game.activity.system.PickRequest;
+import com.mythostrike.model.game.activity.system.PlayCard;
 import com.mythostrike.model.game.activity.system.phase.ActiveTurn;
 import com.mythostrike.model.game.player.Bot;
 import com.mythostrike.model.game.player.Champion;
@@ -21,13 +25,16 @@ import com.mythostrike.model.game.player.ChampionList;
 import com.mythostrike.model.game.player.Player;
 import com.mythostrike.model.lobby.Identity;
 import com.mythostrike.model.lobby.Mode;
-import com.mythostrike.model.lobby.ModeData;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Deque;
+import java.util.LinkedList;
+import java.util.List;
 
 @Slf4j
 public class GameManager {
@@ -88,7 +95,8 @@ public class GameManager {
     public List<Player> convertUserNameToPlayers(@NotNull List<String> playerNames) {
         List<Player> players = new ArrayList<>();
         for (String name : playerNames) {
-            players.add(game.getAllPlayers().stream().filter(player -> player.getUsername().equals(name)).findFirst().orElse(null));
+            players.add(game.getAllPlayers().stream().filter(player -> player.getUsername().equals(name)).findFirst()
+                .orElse(null));
         }
         return players;
     }
@@ -135,7 +143,6 @@ public class GameManager {
      * When all players subscribed to the game websocket the methode allPlayersConnected() is called and from there
      */
     public void gameStart() {
-
 
 
         List<Player> players = game.getAlivePlayers();
@@ -189,8 +196,17 @@ public class GameManager {
         //initial Cards for player
         output("Game Started, Player has following champions:");
         for (Player player : players) {
-            output(String.format("%s at Seat %d has %s with skills: %s", player.getUsername(), players.indexOf(player),
-                player.getChampion().getName(), player.getChampion().getActiveSkills()));
+            StringBuilder hint = new StringBuilder("%s at Seat %d has %s with skills:".formatted(player.getUsername(), players.indexOf(player),
+                    player.getChampion().getName()));
+            for (ActiveSkill skill : player.getChampion().getActiveSkills()) {
+                hint.append(String.format("%n%s", skill.getName()));
+            }
+
+            for (PassiveSkill skill : player.getChampion().getPassiveSkills()) {
+                hint.append(String.format("%n%s", skill.getName()));
+            }
+
+            output(hint.toString());
 
             cardManager.drawCard(new CardDrawHandle(this, "Draw 4 cards at game start",
                 player, CARD_COUNT_START_UP, game.getDrawPile()));
@@ -234,7 +250,7 @@ public class GameManager {
         }
         List<Card> cards = throwDeck.getCards();
         CardMoveHandle cardMoveHandle = new CardMoveHandle(this,
-                "Move cards from tableDeck to throwDeck", null, null, tableDeck, throwDeck, cards);
+            "Move cards from tableDeck to throwDeck", null, null, tableDeck, throwDeck, cards);
         cardManager.moveCard(cardMoveHandle);
         debug(hint.toString());
         gameController.updateGame(lobbyId);
@@ -298,32 +314,27 @@ public class GameManager {
         //If all clients are connected, then the methode cardDistribution() is called.
     }
 
-    public void selectCards(String playerName, List<Integer> cardIds) {
+    public void selectCards(String playerName, List<Integer> cardIds, List<String> targets) {
         List<Card> cards = convertIdToCards(cardIds);
+        List<Player> targetPlayers = convertUserNameToPlayers(targets);
         Player player = getPlayerByName(playerName);
         if (lastPickRequest != null && lastPickRequest.getPlayer().equals(player)) {
             lastPickRequest.setSelectedCards(cards);
+            cards.forEach(card -> card.setPickRequest(lastPickRequest));
+            if (cards.size() == 1) {
+                lastPickRequest.setSelectedPlayers(targetPlayers);
+            }
             lastPickRequest = null;
             proceed();
         }
     }
 
-    //TODO: WICHTIG!!! was wenn der spieler gleichzeitig karte und spieler auswählen soll?
-    public void selectPlayers(String playerName, List<String> targetUsernames) {
+    public void selectSkill(String playerName, int skillId, List<String> targets) {
         Player player = getPlayerByName(playerName);
-
-        List<Player> targets = new ArrayList<>(targetUsernames.stream().map(this::getPlayerByName).toList());
-        if (lastPickRequest != null && lastPickRequest.getPlayer().equals(player)) {
-            lastPickRequest.setSelectedPlayers(targets);
-            lastPickRequest = null;
-            proceed();
-        }
-    }
-
-    public void selectSkill(String playerName, int skillId) {
-        Player player = getPlayerByName(playerName);
+        List<Player> targetPlayers = convertUserNameToPlayers(targets);
         ActiveSkill skill = player.getChampion().getActiveSkills().get(skillId);
         skill.activate();
+        //TODO: check if skill is activated within using the selected Targets
     }
 
     public void cancelRequest(String playerName) {
